deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-tracker
  labels:
    app: student-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-tracker
  template:
    metadata:
      labels:
        app: student-tracker
    spec:
      containers:
      - name: student-tracker
        image: yemisi76/student-tracker:latest  #use your own image
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
