service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-tracker
spec:
  selector:
    app: student-tracker
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
