student-tracker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-tracker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: student.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-tracker
                port:
                  number: 8000
